--- a/OceanWide/Assembly-CSharp-firstpass.csproj
+++ b/OceanWide/Assembly-CSharp-firstpass.csproj
@@ -312,6 +312,9 @@
     <Reference Include="Unity.Analytics.Tracker">
       <HintPath>F:/publishUnity/Unity3d/OceanWide/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Tracker.dll</HintPath>
     </Reference>
+    <Reference Include="LitJson">
+      <HintPath>F:/publishUnity/Unity3d/OceanWide/Assets/Plugins/LitJson.dll</HintPath>
+    </Reference>
     <Reference Include="mscorlib">
       <HintPath>C:/Program Files/Unity/Editor/Data/MonoBleedingEdge/lib/mono/4.7.1-api/mscorlib.dll</HintPath>
     </Reference>
