--- a/OceanWide/Assembly-CSharp.csproj
+++ b/OceanWide/Assembly-CSharp.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Assets\Scripts\Level\LevelItemControl.cs" />
     <Compile Include="Assets\Scripts\QeeScript\Control.cs" />
     <Compile Include="Assets\Scripts\QeeScript\DeviceItem.cs" />
+    <Compile Include="Assets\Scripts\QeeScript\DialogControl.cs" />
     <Compile Include="Assets\Scripts\QeeScript\HTTPServiceControl.cs" />
     <Compile Include="Assets\Scripts\QeeScript\Management.cs" />
     <Compile Include="Assets\Scripts\QeeScript\MenuControl.cs" />
