--- a/OceanWide/Assembly-CSharp.csproj
+++ b/OceanWide/Assembly-CSharp.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Assets\HighlightingSystemDemo\Scripts\WallMovementController.cs" />
     <Compile Include="Assets\Scripts\Control\CameraControl.cs" />
     <Compile Include="Assets\Scripts\Control\PlayVideo.cs" />
+    <Compile Include="Assets\Scripts\Control\TwinkleControl.cs" />
     <Compile Include="Assets\Scripts\Level\BuilderControl.cs" />
     <Compile Include="Assets\Scripts\Level\BuilderManager.cs" />
     <Compile Include="Assets\Scripts\Level\LevelExhibitionControl.cs" />
